# learn-rust-yourself

./: Cargo.toml
notes/: 01_getting_started.md  02_primitive_data_types.md  data_modeling.md
src/: control_flow.rs  enums.rs  functions.rs  main.rs  methods.rs  person.rs  primitive_data_types.rs  structs.rs
