[package]
name = "rust-with-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-data-types"
path = "src/primitive_data_types.rs"

[[bin]]
name = "rust-functions"
path = "src/functions.rs"

[[bin]]
name = "rust-control-flow"
path = "src/control_flow.rs"

[[bin]]
name = "rust-enums"
path = "src/enums.rs"

[[bin]]
name = "rust-structs"
path = "src/structs.rs"

[[bin]]
name = "rust-methods"
path = "src/methods.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
